<resources>
    <string name="app_name">Nanodegree Porfolio</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="build_it_bigger_message">This button will launch Build It Bigger app</string>
    <string name="make_your_app_material_message">This button will launch make your app material app</string>
    <string name="ubiquitous_message">This button will launch ubiquitous app</string>
    <string name="capstone_message">This button will launch capstone app</string>
    <string name="stock_hawk_message">This button will launch stock hawk app</string>
    <string name="popular_movies_message">This button will launch popular moviesapp</string>
</resources>
