<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.danieljames.nanodegreeporfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:gravity="center"
    android:background="@color/colorBackground">

    <TextView
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutheight"
        android:id="@+id/app1"
        android:gravity="center"
        android:text="@string/popular_movies"
        android:elevation="@dimen/evation"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:background="@color/textBoxColor"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:onClick="goToPopularMovies"/>

    <TextView
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutheight"
        android:layout_below="@+id/app1"
        android:id="@+id/app2"
        android:gravity="center"
        android:text="@string/stock_hawk"
        android:elevation="@dimen/evation"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:background="@color/textBoxColor"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:onClick="goToStockHawk"/>

    <TextView
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutheight"
        android:layout_below="@+id/app2"
        android:id="@+id/app3"
        android:gravity="center"
        android:text="@string/build_it_bigger"
        android:elevation="@dimen/evation"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:background="@color/textBoxColor"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:onClick="goToBuildItBigger"/>

    <TextView
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutheight"
        android:layout_below="@+id/app3"
        android:id="@+id/app4"
        android:gravity="center"
        android:text="@string/make_your_app_material"
        android:elevation="@dimen/evation"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:background="@color/textBoxColor"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:onClick="goToMakeYourAppMaterial"/>
    <TextView
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutheight"
        android:layout_below="@+id/app4"
        android:id="@+id/app5"
        android:gravity="center"
        android:text="@string/go_ubiquitous"
        android:elevation="@dimen/evation"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:background="@color/textBoxColor"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:onClick="goToGoUbiquitous"/>

    <TextView
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutheight"
        android:layout_below="@+id/app5"
        android:id="@+id/app6"
        android:gravity="center"
        android:text="@string/capstone"
        android:elevation="@dimen/evation"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:background="@color/textBoxColor"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:onClick="goToCapstone"/>


</RelativeLayout>
